--- a/getdata/modules/socib/socib.yml
+++ b/getdata/modules/socib/socib.yml
@@ -2,12 +2,14 @@ products:
     modeling:
         wave:
             urls:
-                opendap: http://thredds.socib.es/thredds/dodsC/operational_models/oceanographical/wave/sapo_ib/
-                http: http://thredds.socib.es/thredds/fileServer/operational_models/oceanographical/wave/sapo_ib/
-    realtime:
+                opendap: http://thredds.socib.es/thredds/dodsC/operational_models/oceanographical/wave/sapo_ib
+                http: http://thredds.socib.es/thredds/fileServer/operational_models/oceanographical/wave/sapo_ib
+            basename: sapo_ib_swan_%s.nc
+    observational:
         fixed_estations:
             colonia_saintpere:
                 urls:
-                    opendap: http://thredds.socib.es/thredds/dodsC/mooring/sea_level/station_coloniasantpere/L1/
-                    http: http://thredds.socib.es/thredds/fileServer/mooring/sea_level/station_coloniasantpere/L1/
+                    opendap: http://thredds.socib.es/thredds/dodsC/mooring/sea_level/station_coloniasantpere/L1
+                    http: http://thredds.socib.es/thredds/fileServer/mooring/sea_level/station_coloniasantpere/L1
+                basename: dep20151028_station-coloniasantpere_L1_%s.nc
                 
